--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -36,6 +36,7 @@
                     <div class="navbar-nav ms-auto navbar-ml">
                         <a class="nav-link" href="{% url 'home.about' %}">About</a>
                         <a class="nav-link" href= "{% url 'movies.index' %}">Movies</a>
+                        <a class="nav-link" href="{% url 'local_popularity_map' %}">Popularity Map</a>
                         <a class="nav-link" href="{% url 'cart.index' %}">Cart</a>
                         <a class="nav-link" href="{% url 'cart.all_feedback' %}">Feedback</a>
                         <a class="nav-link" href="{% url 'petition_list' %}">Petitions</a>
